manifests/bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
  namespace: my-apps
  labels:
    app: bar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      nodeSelector:
        app-group: bar
      containers: 
      - command:
        - /agnhost
        - serve-hostname
        - --http=true
        - --port=8080
        image: registry.k8s.io/e2e-test-images/agnhost:2.39
        name: bar-app
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
  namespace: my-apps
spec:
  selector:
    app: bar
  ports:
  # Default port used by the image
  - port: 80
    targetPort: 8080
